--- a/html/bootstrap_input_groups.html
+++ b/html/bootstrap_input_groups.html
@@ -171,6 +171,8 @@
 
                                 <h2 style="text-align: justify;">Группы ввода</h2>
 
+                                <img src="../img/11.jpg" alt="11" class="pictures1">
+
                                 <p>Класс <code>.input-group</code> — это контейнер для улучшения ввода путем добавления
                                     значка, текста или кнопки перед
                                     или за полем ввода в качестве «текста справки».</p>
