--- a/html/bootstrap_navbars.html
+++ b/html/bootstrap_navbars.html
@@ -141,7 +141,8 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Bootstrap 5 Панель
+                                    навигации</h1>
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -168,7 +169,26 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+
+                                <h2>Базовая панель навигации</h2>
+
+                                <img src="../img/12.webp" alt="12" class="pictures">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
                             </section>
